# rust-benchmark-template

./: Cargo.toml  README.md  cargo-generate.toml
benches/: first_bench.rs
