[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
{% if tool == "iai" %}
iai = "0.1"
{% else %}
criterion = "0.3"
{% endif %}
# Add your dependencies here

[[bench]]
name = "first_bench"
harness = false
